# riscv-axi-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md
.codex/skills/git-commit/: SKILL.md
docs/: axi4_interface.md
examples/: demo_api_with_simddr.cpp
include/: CSR.h  MemorySubsystem.h  SimCpu.h  config.h  sc_axi4_sim_api.h
src/: main.cpp  sc_axi4_sim_api.cpp
src/cpu/: single_cycle_cpu.cpp  single_cycle_cpu_standalone.cpp
src/cpu/include/: single_cycle_cpu.h
src/ref/: ref.cpp  ref_standalone.cpp
src/ref/include/: ref.h
tools/: README.md  run_regression.sh  setup_githooks.sh
